styles to header button - fix align/justify items

--- a/styles.css
+++ b/styles.css
@@ -63,11 +63,16 @@ header {
 }
 
 .header__title-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 90%;
     min-width: 23rem;
     max-width: 90rem;
     height: 21.8rem;
     margin-top: 4rem;
+    text-align: center;
+    align-self: center;
 }
 
 .header__title-container h1{
@@ -83,4 +88,29 @@ header {
     font-weight: normal;
     line-height: 1.8rem;
     color: var(--c-primary-soft);
+}
+
+.header__title-container .header__button {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    position: absolute;
+    bottom: 0;
+    transform: translateY(50%);
+    height: 4.8rem;
+    width: 23rem;
+    background-color: var(--c-off-white);
+    box-shadow: 0 0.4rem 0.8rem rgba(89, 73, 30, 0.16);
+    border-radius: 0.4rem;
+    text-decoration: none;
+    font-size: 1.4rem;
+    font-weight: bold;
+    color: var(--c-warm-dark);
+}
+
+.header__button span {
+    display: inline-block;
+    width: 1.3rem;
+    height: 0.8rem;
+    background-image: url("https://raw.githubusercontent.com/degranda/batata-bit/955b37d9972123343010b48911a0cb29dc3b4d05/assets/icons/down-arrow.svg");
 }
